--- a/templates/home.html
+++ b/templates/home.html
@@ -1,55 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Wongsaton Careers</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  
   <style>
-    h1 {
-      font-size: 40px;
-      font-family: "Arial";
-      font-weight: normal;
-      color: rgb(100, 100, 100);
-      text-align: center;
-    }
-
     #banner {
-      width: 100%;
       height: 360px;
+      width: 100%;
       object-fit: cover;
-    }
-
-    h2 {
-      font-size: 32px;
-      font-family: Arial;
-      font-weight: normal;
-      color: rgb(100, 100, 100);
-      text-align: center;
-    }
-
-    .bodytext {
-      font-family: Arial;
-      color: rgb(80, 80, 80);
-    }
-
-    #container {
-      max-width: 720px;
-      margin: 0 auto;
+      margin-bottom: 16px;
     }
   </style>
 </head>
 <body>
-  <div id="container">
-  <h1>Wongsaton Careers</h1>
-  <img id="banner" src="static/banner.jpg" height="320">
-  <h2>About Wongsaton</h2>
-  <p class="bodytext">
+  <div class="container">
+  <h1 class="text-center mt-2 mb-1">Wongsaton Careers</h1>
+  <img class="img-fluid" src="static/banner.jpg" height="320">
+  <h2 class="text-center mt-3">About Wongsaton</h2>
+  <p class="lead">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
 
-  <h2>Open Positions</h2>
-  <p class="bodytext">TODO - Show the jobs here</p>
+  <h2 class="text-center mt-2">Open Positions</h2>
+  <p class="lead">TODO - Show the jobs here</p>
   <div style="text-align:center">
-    <button>Contact Us</button>
-    <p class="bodytext">Copyright 2024, Wongsaton Kampusan</p>
+    <button class="btn btn-primary btn-lg">Contact Us</button>
+    <p class="mt-2">Copyright 2024, Wongsaton Kampusan</p>
   </div>
   </div>
 </body>
