--- a/templates/home.html
+++ b/templates/home.html
@@ -17,18 +17,23 @@
 </head>
 <body>
   <div class="container">
-  <h1 class="text-center mt-2 mb-1">Wongsaton Careers</h1>
+  <h1 class="text-center mt-2 mb-1">{{my_name}} Careers</h1>
   <img class="img-fluid" src="static/banner.jpg" height="320">
-  <h2 class="text-center mt-3">About Wongsaton</h2>
+  <h2 class="text-center mt-3">About {{my_name}}</h2>
   <p class="lead">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
 
   <h2 class="text-center mt-2">Open Positions</h2>
-  <p class="lead">TODO - Show the jobs here</p>
+  <div>
+    <!-- {{jobs}} -->
+    {% for job in jobs %}
+    {% include 'jobitem.html' %}
+    {% endfor %}
+  </div>
   <div style="text-align:center">
     <button class="btn btn-primary btn-lg">Contact Us</button>
-    <p class="mt-2">Copyright 2024, Wongsaton Kampusan</p>
+    <p class="mt-2">Copyright 2024, {{my_name}}</p>
   </div>
   </div>
 </body>
