Add about information and make a footer, nav html

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,13 +16,21 @@
   </style>
 </head>
 <body>
+  {% include 'nav.html' %}
   <div class="container">
   <h1 class="text-center mt-2 mb-1">{{my_name}} Careers</h1>
-  <img class="img-fluid" src="static/banner.jpg" height="320">
-  <h2 class="text-center mt-3">About {{my_name}}</h2>
-  <p class="lead">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
+  <img class="img-fluid" src="static/banner.jpg" height="320px">
+  <h2 class="text-center mt-3">About me, {{my_name}}</h2>
+<div class="row" style="margin-bottom:14px">
+  <div class="col-md-6">
+    <p class="lead">
+      Meticulous Automation Engineer skilled with developing process control system and improving existing process. Strong experience automating the creation of test environments. Driven leader with advanced-level knowledge in batch control process and data acquisition systems. Proficient tester, designer and debugger with an in-depth understanding of building and running automated systems for manufacturing. Well-versed in the full project lifecycle, technical support needs and project coordination functions. Excellent communication, organizational and interpersonal skills. Hardworking and passionate job seeker with strong organizational skills eager to secure Automation, Control and Project engineer position. Ready to help team achieve company goals.
+    </p>
+  </div>
+  <div class="d-none d-md-block col-md-6">
+    <img class="img-fluid" src="static/controlroom.jpg" style="height:320px; border-radius:5px">
+  </div>
+</div>
 
   <h2 class="text-center mt-2">Job Opening</h2>
   <div>
@@ -32,9 +40,10 @@
     {% endfor %}
   </div>
   <div style="text-align:center">
-    <button class="btn btn-primary btn-lg">Contact Us</button>
-    <p class="mt-2">Copyright 2024, {{my_name}}</p>
+    <a href="mailto:wongsatonkampusan@gmail.com?subject=Question%20about%20job%20openings&body=Hi%20Wongsaton%2C%0D%0A%0D%0AMy%20name%3A%20%3Cyour%20name%20here%3E%0D%0AMy%20questions%3A%20%3Center%20question%20here%3E%0D%0A%0D%0APlease%20let%20me%20know%20if%20you%20would%20like%20to%20discuss%20further!" class="btn btn-primary btn-lg">Contact Us</a>
   </div>
   </div>
+
+  {% include 'footer.html' %}
 </body>
 </html>
