--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -8,6 +8,6 @@
   {% endif %}
 </div>
 <div class="col-3">
-  <button type="button" class="btn btn-outline-primary">Apply</button>
+  <a href="mailto:wongsatonkampusan@gmail.com?subject=Job%20Opportunity%20-%20{{job['title']}}&body=Hi%20Wongsaton%2C%0D%0A%0D%0AMy%20name%3A%20%3Cyour%20name%20here%3E%0D%0AMy%20LinkedIn%20link%3A%20%3Clinkedin%20link%3E%0D%0AI%20would%20like%20to%20connect%20you%20because%20your%20skills%20and%20experience%20fit%20to%20this%20job.%0D%0AJob%20description%3A%20%3Cjob%20description%20detail%20and%20link%3E%0D%0A%0D%0APlease%20let%20me%20know%20if%20you%20would%20like%20to%20discuss%20further!" type="button" class="btn btn-outline-primary">Apply</a>
 </div>
 </div>
