--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar bg-body-tertiary shadow-sm fixed-top bg-white">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="/static/logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      <img src="https://media.licdn.com/dms/image/C5603AQG3uGaytzj1PA/profile-displayphoto-shrink_800_800/0/1632931779102?e=1710979200&v=beta&t=2cu_BAluqiNdmxtZmvEHCYmLBo9ySr6PCKlast0EDkc" alt="Logo" width="24" height="24" class="d-inline-block align-text-top">
       Wongsaton Kampusan
     </a>
   </div>
