--- a/templates/home.html
+++ b/templates/home.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Wongsaton Careers</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  
-  <style>
-    #banner {
-      height: 360px;
-      width: 100%;
-      object-fit: cover;
-      margin-bottom: 16px;
-    }
-  </style>
+  {% include 'bootstrap.html'%}
 </head>
 <body>
   {% include 'nav.html' %}
   <div class="container">
-  <h1 class="text-center mt-2 mb-1">{{my_name}} Careers</h1>
-  <img class="img-fluid" src="static/banner.jpg" height="320px">
-  <h2 class="text-center mt-3">About me, {{my_name}}</h2>
+  <h1 class="text-center mt-2 mb-1">Careers</h1>
+  {% include 'banner.html' %}
+  <h2 class="text-center mt-3">About me</h2>
 <div class="row" style="margin-bottom:14px">
   <div class="col-md-6">
     <p class="lead">
