Store application in database

--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -20,6 +20,7 @@
       <li>{{line}}</li>
       {% endfor %}
     </ul>
+  {% include 'application_form.html' %}
   <!-- <p class="lead">{{job.responsibilities}}</p> -->
   </div>
   {% include 'footer.html' %}
